--- a/src/email.mjml
+++ b/src/email.mjml
@@ -32,7 +32,7 @@
     <!-- Wrapper -->
     <mj-section background-color="#f4f7f6" padding="0">
       <mj-column padding="0">
-        <!-- LANGUAGE BAR / HEADER -->
+        <!-- HEADER -->
         <mj-section background-color="#1C222D" padding="0">
           <mj-column width="100%">
             <mj-table
@@ -44,7 +44,7 @@
               <tr>
                 <td width="25%" align="left" valign="middle">
                   <img
-                    src="images/logo.png"
+                    src="https://raw.githubusercontent.com/MLlAlonso/html_email/refs/heads/main/src/images/logo.png"
                     alt="Velovita"
                     width="100"
                     style="display: block"
@@ -110,7 +110,7 @@
         <mj-hero
           mode="fixed-height"
           height="200px"
-          background-url="images/hero_life.png"
+          background-url="https://github.com/MLlAlonso/html_email/blob/main/src/images/hero_life.png?raw=true"
           background-position="center center"
           background-size="cover"
           padding="0"
@@ -171,7 +171,7 @@
                 <!-- IMAGE -->
                 <td width="100" valign="top" style="padding-right: 20px">
                   <img
-                    src="images/kosta.png"
+                    src="https://github.com/MLlAlonso/html_email/blob/main/src/images/kosta.png?raw=true"
                     alt="Kosta Gara"
                     width="100"
                     height="100"
@@ -242,7 +242,7 @@
                     <tr>
                       <td width="120" valign="top" style="padding-right: 16px">
                         <img
-                          src="images/card01.png"
+                          src="https://github.com/MLlAlonso/html_email/blob/main/src/images/card01.png?raw=true"
                           alt="Spring Promo"
                           width="120"
                           style="display: block; border-radius: 8px"
@@ -350,7 +350,7 @@
                       </td>
                       <td width="140" valign="top">
                         <img
-                          src="images/card02.png"
+                          src="https://github.com/MLlAlonso/html_email/blob/main/src/images/card02.png?raw=true"
                           alt="Fiesta Event"
                           width="120"
                           style="display: block; border-radius: 8px"
@@ -383,7 +383,7 @@
                     <tr>
                       <td width="140" valign="top" style="padding-right: 16px">
                         <img
-                          src="images/card03.png"
+                          src="https://github.com/MLlAlonso/html_email/blob/main/src/images/card03.png?raw=true"
                           alt="Incentive Trip"
                           width="120"
                           style="display: block; border-radius: 8px"
@@ -498,7 +498,7 @@
                             <!-- IMAGE -->
                             <td width="40%">
                               <img
-                                src="images/Rory.png"
+                                src="https://github.com/MLlAlonso/html_email/blob/main/src/images/Rory.png?raw=true"
                                 alt="Monday Training"
                                 width="100%"
                                 height="300px"
@@ -608,7 +608,7 @@
                           <tr>
                             <td style="padding-right: 6px">
                               <img
-                                src="images/video.png"
+                                src="https://github.com/MLlAlonso/html_email/blob/main/src/images/video.png?raw=true"
                                 alt="Zoom"
                                 width="25px"
                                 height="25px"
@@ -692,7 +692,7 @@
                             <!-- IMAGE -->
                             <td width="40%">
                               <img
-                                src="images/valeria_duran.png"
+                                src="https://github.com/MLlAlonso/html_email/blob/main/src/images/valeria_duran.png?raw=true"
                                 alt="Monday Training"
                                 width="100%"
                                 height="300px"
@@ -801,7 +801,7 @@
                           <tr>
                             <td style="padding-right: 6px">
                               <img
-                                src="images/video.png"
+                                src="https://github.com/MLlAlonso/html_email/blob/main/src/images/video.png?raw=true"
                                 alt="Zoom"
                                 width="25px"
                                 height="25px"
